--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,4 +7,4 @@ add_compile_options(-Wall -g
         #-Werror
         )
 
-add_executable(Stone main.cpp Token.hpp StoneException.h Lexer.h Lexer.cpp ParseException.cpp ParseException.h ast/AstTree.cpp ast/AstTree.h ast/AstNodeType.cpp ast/AstNodeType.h BasicParser.cpp BasicParser.h Parse.hpp BasicType.h BasicType.cpp Env.h BasicEnv.hpp)
+add_executable(Stone main.cpp Token.hpp StoneException.h Lexer.h Lexer.cpp ParseException.cpp ParseException.h ast/AstTree.cpp ast/AstTree.h ast/AstNodeType.cpp ast/AstNodeType.h BasicParser.cpp BasicParser.h Parse.hpp BasicType.h BasicType.cpp Env.h BasicEnv.hpp FuncParser.h FuncParser.cpp)
